--- a/.stylelintrc
+++ b/.stylelintrc
@@ -7,7 +7,9 @@
 	],
 	"ignoreFiles": ["**/*.tsx", "**/*.html", "**/*.md"],
 	"rules": {
+		"selector-class-pattern": "^[a-z][a-zA-Z0-9]+$",
 		"no-descending-specificity": null,
+		"scss/no-global-function-names": null,
 		"order/properties-order": [
 			"position",
 			"z-index",
@@ -32,18 +34,6 @@
 		"selector-pseudo-class-no-unknown": [
 			true,
 			{ "ignorePseudoClasses": ["global"] }
-		],
-		"at-rule-no-unknown": [
-			true,
-			{
-				"ignoreAtRules": [
-					"function",
-					"if",
-					"each",
-					"include",
-					"mixin"
-				]
-			}
 		]
 	}
 }
