--- a/package.json
+++ b/package.json
@@ -25,14 +25,22 @@
 		"@babel/runtime": "^7.17.9",
 		"@loadable/component": "^5.15.2",
 		"@loadable/server": "^5.15.2",
+		"@types/react-redux": "^7.1.24",
+		"@types/redux": "^3.6.0",
+		"@types/redux-actions": "^2.6.2",
+		"axios": "^0.27.2",
 		"classnames": "^2.3.1",
 		"core-js": "^3.22.5",
 		"dotenv": "^16.0.1",
 		"postcss": "^8.4.13",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
+		"react-redux": "^8.0.0",
 		"react-router": "^6.3.0",
-		"react-router-dom": "^6.3.0"
+		"react-router-dom": "^6.3.0",
+		"redux": "^4.1.2",
+		"redux-actions": "^2.6.5",
+		"redux-saga": "^1.1.3"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.17.10",
@@ -89,6 +97,7 @@
 		"postcss-scss": "^4.0.4",
 		"prettier": "^2.6.2",
 		"react-refresh": "^0.13.0",
+		"redux-devtools-extension": "^2.13.9",
 		"require-from-string": "^2.0.2",
 		"rimraf": "^3.0.2",
 		"sass": "^1.51.0",
