--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
 			"pages/*": ["src/client/pages/*"],
 			"utils/*": ["src/client/utils/*"],
 			"assets/*": ["src/client/assets/*"],
+			"styles/*": ["src/client/styles/*"],
 			"config/*": ["config/*"]
 		},
 		"typeRoots": ["@types", "node_modules/@types"]
