--- a/.eslintrc
+++ b/.eslintrc
@@ -3,8 +3,13 @@
 	"plugins": [
 		"@typescript-eslint",
 		"prettier",
-		"react"
+		"react",
+		"react-hooks"
 	],
+	"rules": {
+		"react-hooks/rules-of-hooks": "warn",
+		"react-hooks/exhaustive-deps": "warn"
+	},
 	"env": {
 		"browser": true,
 		"jest": true
