--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
 		"react-router": "^6.3.0",
 		"react-router-dom": "^6.3.0",
 		"redux": "^4.1.2",
-		"redux-actions": "^2.6.5",
-		"redux-saga": "^1.1.3"
+		"redux-actions": "^2.6.5"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.17.10",
@@ -83,6 +82,7 @@
 		"eslint": "^8.15.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.29.4",
+		"eslint-plugin-react-hooks": "^4.5.0",
 		"express": "^4.18.1",
 		"html-loader": "^3.1.0",
 		"html-webpack-plugin": "^5.5.0",
@@ -98,6 +98,7 @@
 		"prettier": "^2.6.2",
 		"react-refresh": "^0.13.0",
 		"redux-devtools-extension": "^2.13.9",
+		"redux-saga": "^1.1.3",
 		"require-from-string": "^2.0.2",
 		"rimraf": "^3.0.2",
 		"sass": "^1.51.0",
