--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
 			"utils/*": ["src/client/utils/*"],
 			"assets/*": ["src/client/assets/*"],
 			"styles/*": ["src/client/styles/*"],
-			"config/*": ["config/*"]
+			"config/*": ["config/*"],
+			"core/*": ["core/*"]
 		},
 		"typeRoots": ["@types", "node_modules/@types"]
 	},
